# controller/health-check.go
@@ -20,7 +20,7 @@ func NewHealthCheckController(hs service.HealthCheckService) *HealthCheckControl
 func (hc *HealthCheckController) RegisterHealthCheckRouter(r *gin.RouterGroup) {
 	c := r.Group("/health")
 	{
-		c.POST("/check", ginx.Wrap(hc.HealthCheck))
+		c.GET("/check", ginx.Wrap(hc.HealthCheck))
 	}
 }
 
@@ -33,7 +33,7 @@ func (hc *HealthCheckController) RegisterHealthCheckRouter(r *gin.RouterGroup) {
 // @Success		200	{object}	response.Response{data=response.HealthCheckResponse}	"成功返回健康检查结果"
 // @Failure		400	{object}	response.Response										"请求参数错误"
 // @Failure		500	{object}	response.Response										"服务器内部错误"
-// @Router			/api/v1/health [get]
+// @Router			/api/v1/health/check [get]
 func (hc *HealthCheckController) HealthCheck(c *gin.Context) (response.Response, error) {
 	resp := hc.hs.HealthCheck()
 
